--- a/streamlit/secrets.toml
+++ b/streamlit/secrets.toml
@@ -62,3 +62,5 @@ messageFormat = "%(asctime)s.%(msecs)03d %(name)s: %(levelname)s: %(message)s"
 # Deprecation warnings
 showPyplotGlobalUse = false
 showfileUploaderEncoding = false
+[openai]
+api_key="sk-YourSecretKeyGoesHere"
