--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,16 @@
-
+streamlit>=1.28.0
+pandas>=2.0.0
+numpy>=1.24.0
+gspread>=5.12.0
+google-auth>=2.23.0
+google-auth-oauthlib>=1.1.0
+google-auth-httplib2>=0.1.1
+langchain>=0.1.0
+langchain-openai>=0.0.5
+openai>=1.3.0
+python-dotenv>=1.0.0
+pytest>=7.4.0
+pytest-cov>=4.1.0
+black>=23.0.0
+flake8>=6.0.0
+mypy>=1.5.0
